<resources>
    <string name="app_name">Bin</string>
    <string name="write_bin">Введите первые цифры номера карты (БИН/ИИН)</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="scheme_network">Scheme / Network</string>
    <string name="type">Type</string>
    <string name="bank">Bank</string>
    <string name="brand">Brand</string>
    <string name="prepaid">Prepaid</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="card_number">Card Number</string>
    <string name="length">Length</string>
    <string name="luhn">Luhn</string>
    <string name="country">Country</string>
    <string name="latitude_longitude">(latitude:<font color="#FF000000"><b>%1s</b></font> , longitude:<font color="#FF000000"><b>%2s</b></font>)</string>
    <string name="history">History</string>
    <string name="not_network">Нет доступа к интернету!</string>
    <string name="connection_restored">Подключение восстановлено!</string>
    <string name="try_again">Try again</string>
    <string name="can_not_load_data">Упс, не удалось загрузить данные</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="no_data">No data</string>
    <string name="install_maps">"Please install a maps application"</string>
</resources>