<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/co"
    android:background="@color/white"
    tools:context=".ui.fragment.home.HomeFragment">


        <ImageView
            android:id="@+id/image_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight"
            android:contentDescription="@string/history"
            android:padding="@dimen/eight"
            android:src="@drawable/ic_baseline_history_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_bin"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_edit"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLines="1"
            android:padding="@dimen/twelve"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />


        <TextView
            android:id="@+id/txt_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/four"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:fontFamily="casual"
            android:lines="1"
            android:text="@string/write_bin"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="@id/edit_bin"
            app:layout_constraintStart_toStartOf="@id/edit_bin"
            app:layout_constraintTop_toBottomOf="@id/edit_bin" />

        <ImageView
            android:id="@+id/image_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/four"
            android:contentDescription="@string/clear"
            android:padding="@dimen/eight"
            android:src="@drawable/ic_baseline_clear_24"
            app:layout_constraintBottom_toBottomOf="@id/edit_bin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_search"
            app:layout_constraintTop_toTopOf="@id/edit_bin" />

        <ImageView
            android:id="@+id/image_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/eight"
            android:contentDescription="@string/search"
            android:padding="@dimen/eight"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintBottom_toBottomOf="@id/edit_bin"
            app:layout_constraintEnd_toStartOf="@id/image_clear"
            app:layout_constraintStart_toEndOf="@id/edit_bin"
            app:layout_constraintTop_toTopOf="@id/edit_bin" />

        <LinearLayout
            android:id="@+id/container_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/twenty_four"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/container_flow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_hint">

            <TextView
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank" />

            <TextView
                android:id="@+id/txt_bank_name"
                style="@style/TextBin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                tools:text="Jyske Bank, Hjørring" />

            <TextView
                android:id="@+id/txt_bank_url"
                style="@style/TextBin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/eight"
                android:textColor="@color/color_blue"
                android:textSize="@dimen/sixteen_sp"
                android:textStyle="normal"
                tools:text="www.jyskebank.dk" />

            <TextView
                android:id="@+id/txt_bank_number"
                style="@style/TextBin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sixteen_sp"
                tools:text="+4589893300" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_scheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scheme_network" />

            <TextView
                android:id="@+id/txt_scheme_network"
                style="@style/TextBin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Visa" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <TextView
                android:id="@+id/txt_type"
                style="@style/TextBin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Debit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand" />

            <TextView
                android:id="@+id/txt_brand"
                style="@style/TextBin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Visa/Dankort" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_prepaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prepaid" />

            <TextView
                android:id="@+id/txt_prepaid"
                style="@style/TextBin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/yes" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/container_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_title_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:paddingHorizontal="@dimen/twelve"
                android:text="@string/card_number"
                android:textSize="@dimen/sixteen_sp" />

            <TextView
                android:id="@+id/txt_title_number_length"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_title_number"
                android:layout_alignStart="@id/txt_title_number"
                android:layout_marginTop="@dimen/four"
                android:text="@string/length"
                android:textSize="@dimen/twelve_sp" />

            <TextView
                android:id="@+id/txt_number_length"
                style="@style/TextBin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_title_number_length"
                android:layout_alignStart="@id/txt_title_number_length"
                android:layout_alignEnd="@id/txt_title_number_length"
                android:gravity="center"
                tools:text="16" />

            <TextView
                android:id="@+id/txt_title_luhn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@id/txt_title_number"
                android:layout_alignEnd="@id/txt_title_number"
                android:layout_marginTop="@dimen/four"
                android:text="@string/luhn" />

            <TextView
                android:id="@+id/txt_number_luhn"
                style="@style/TextBin"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_title_luhn"
                android:layout_alignStart="@id/txt_title_luhn"
                android:layout_alignEnd="@id/txt_title_luhn"
                android:gravity="center"
                tools:text="@string/no" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/container_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country" />

            <TextView
                android:id="@+id/txt_country"
                style="@style/TextBin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/four"
                tools:text="🇩🇰 Denmark" />

            <TextView
                android:id="@+id/txt_latitude_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:text="@string/latitude_longitude"
                android:textSize="@dimen/twenty_sp" />

        </LinearLayout>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/container_flow"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen"
            app:constraint_referenced_ids="container_scheme,container_type,container_brand,container_prepaid,container_number,container_country"
            app:flow_firstHorizontalStyle="spread"
            app:flow_horizontalGap="@dimen/twenty"
            app:flow_verticalGap="@dimen/twenty_four"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_bank" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_info_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="container_bank,container_flow"
            tools:visibility="visible" />

        <include layout="@layout/part_result" />

</androidx.constraintlayout.widget.ConstraintLayout>